--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,22 +11,21 @@
           <p class="text-mute">Enter your credentials to access your account.</p>
           <form class="signup-form">
             <label class="inp">
-              <input type="email" class="input-text" placeholder="&nbsp;">
+              <input type="email" id="emailId" class="input-text" placeholder="&nbsp;">
               <span class="label">Email</span>
               <span class="input-icon"><i class="fa-solid fa-envelope"></i></span>
             </label>
             <label class="inp">
-              <input type="password" class="input-text" placeholder="&nbsp;" id="password">
+              <input type="password" id="enterpassword" class="input-text" placeholder="&nbsp;" id="password">
               <span class="label">Password</span>
               <span class="input-icon input-icon-password" data-password><i class="fa-solid fa-eye"></i></span>
             </label>
-            <button class="btn btn-login">Login</button>
+            <button class="btn btn-login" id="loginButton">Login</button>
           </form>
           <p class="text-mute">Not a member? <a href="$">Sign up</a></p>
         </main>
         <div class="welcome-container">
           <h1 class="heading-secondary">Welcome to <span class="lg">Culture holidays!</span></h1>
-          <!-- <img src="https://png2.cleanpng.com/sh/82506800d9e08bf14cb0a38d53322fea/L0KzQYm3VsI1N6Rug5H0aYP2gLBuTfxieKV0iJ9taYPzfLLCTfRmfppofZ92dXz3eb7shPliNZ1miOZ4cD3wf7TylgAuPZM3fqNsMEC4RIKAUsQvOmU5SaUBMkm0RYOCWME1OGI7S6Y9NT7zfri=/kisspng-laptop-display-device-multimedia-laptop-mockup-5b2f1c00541724.2441362915298140163445.png" alt=""> -->
         </div>
       </div>
       <script src="/js/login.js"></script>
