--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js" integrity="sha512-luMnTJZ7oEchNDZAtQhgjomP1eZefnl82ruTH/3Oj/Yu5qYtwL7+dVRccACS/Snp1lFXq188XFipHKYE75IaQQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"
+    integrity="sha512-luMnTJZ7oEchNDZAtQhgjomP1eZefnl82ruTH/3Oj/Yu5qYtwL7+dVRccACS/Snp1lFXq188XFipHKYE75IaQQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +22,7 @@
 </head>
 
 <body>
-  <div class="container-fluid page-2" id="page-2" >
+  <div class="container-fluid page-2" id="page-2">
     <div class="row" style="height: 100vh; overflow: hidden;">
       <div class="col-md-4 dark-mode-bg overflow-y-auto" style="background-color: aliceblue;">
         <div class="fixed-content ">
@@ -40,113 +42,11 @@
         </div>
       </div>
 
-      <div class="col-md-8 d-flex flex-column dark-mode-bg">
-        <div class="d-flex align-items-center">
-          <img src="images/btmimage2.png" class="didi-3" alt="Your Image">
-          <p class="ms-2 mb-0 didi-name">Maalik <br> <span class="position">Online</span></p>
-          <span class="green-dot"></span>
-
-          <div class="icon-container ms-auto">
-            <i class="ri-search-line"></i>
-          </div>
-        </div>
+      <div class="col-md-8 d-flex flex-column dark-mode-bg .chat-conversation">
+        <div id="chatWidgetWrapper"></div>
         <div class="chat-container">
-          <div class="chat-conversation mt-3">
-            <div class="chat-bubble sender">
-              <div class="sender-info">
-
-                <div class="message">
-
-                  <p class="chats-s">Maalik mai aa gya</p>
-
-                </div>
-              </div>
-            </div>
-
-            <div class="chat-bubble receiver">
-              <div class="receiver-info">
-                <!-- <img src="images/btmimage4.png" class="receiver-image" alt="Receiver Image"> -->
-                <div class="message receiver">
-                  <p class="chats-r">Aye Bandya.....</p>
-
-                </div>
-              </div>
-            </div>
-
-            <div class="chat-bubble sender">
-              <div class="sender-info">
-                <div class="message">
-
-                  <p class="chats-s">Naam Bataiye</p>
-
-                </div>
-                <!-- <img src="images/btmimage2.png" class="sender-image" alt="Sender Image"> -->
-              </div>
-            </div>
-
-            <div class="chat-bubble sender">
-              <div class="sender-info">
-                <div class="message">
-
-                  <p class="chats-s">Bhupendra Jogi</p>
-
-                </div>
-                <!-- <img src="images/btmimage2.png" class="sender-image" alt="Sender Image"> -->
-              </div>
-            </div>
-            <div class="chat-bubble receiver">
-              <div class="receiver-info">
-                <!-- <img src="images/btmimage4.png" class="receiver-image" alt="Receiver Image"> -->
-                <div class="message receiver">
-                  <p class="chats-r">US me kaha kaha gye hai.</p>
-
-                </div>
-              </div>
-            </div>
-            <div class="chat-bubble sender">
-              <div class="sender-info">
-                <div class="message">
-
-                  <p class="chats-s">Aap giyan hai?</p>
-
-                </div>
-                <!-- <img src="images/btmimage2.png" class="sender-image" alt="Sender Image"> -->
-              </div>
-            </div>
-            <div class="chat-bubble receiver">
-
-              <div class="receiver-info">
-                <!-- <span class="message-time receiver">10:35 AM</span> -->
-                <!-- <img src="images/btmimage4.png" class="receiver-image" alt="Receiver Image"> -->
-                <div class="message receiver">
-                  <p class="chats-r">aapko termintae kiya jata hai.</p>
-
-                </div>
-              </div>
-
-            </div>
-            <div class="chat-bubble sender">
-              <div class="sender-info">
-                <div class="message">
-
-                  <p class="chats-s">Promotion ho gya hai apka</p>
-
-                </div>
-
-              </div>
-              <!-- <img src="images/btmimage2.png" class="sender-image" alt="Sender Image"> -->
-            </div>
-            <div class="chat-bubble receiver">
-              <div class="receiver-info">
-                <!-- <img src="images/btmimage4.png" class="receiver-image" alt="Receiver Image"> -->
-                <div class="message receiver">
-
-                  <p class="chats-r">Mai hu boombasur</p>
-
-
-                </div>
-              </div>
-            </div>
+          <div class="chat-conversation mt-3" id="chatConversation">
+            <!-- Chat bubbles will be dynamically added here -->
           </div>
         </div>
         <div class="chat-input">
