--- a/views/agentside.ejs
+++ b/views/agentside.ejs
@@ -1,317 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <!-- main style -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="wrapper">
-      <!-- left-start -->
-      <div class="left">
-        <div class="left-container">
-          <div class="left-card">
-            <div class="left-card-container">
-              <div class="left-header">
-                <div class="left-header-container">
-                  <div>
-                    <div class="arrow">
-                      <img
-                        src="https://i.postimg.cc/pLgsRzY0/Vector-3.png"
-                        alt="arrow"
-                      />
-                    </div>
-                    <span class="header-bold">Scarlett Murphy</span>
-                  </div>
-                  <div class="kebab-menu">
-                    <img
-                      src="https://i.postimg.cc/mk2w8wBr/Dots.png"
-                      alt="kebab-menu"
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="today">Today</div>
-              <div class="left-body">
-                <div class="left-body-container">
-                  <div class="first">
-                    <div class="avt">
-                      <img
-                        src="https://i.postimg.cc/8zVFGCfR/Contact-Name.png"
-                        alt="avatar"
-                      />
-                    </div>
-                    <div class="message">
-                      <img
-                        src="https://i.postimg.cc/bvmd1HCg/Text-Message.png"
-                        alt="msg"
-                      />
-                    </div>
-                  </div>
-                  <div class="second">
-                    <img
-                      src="https://i.postimg.cc/JzV8068J/Group-37.png"
-                      alt="second-avt"
-                    />
-                  </div>
-                  <div class="third">
-                    <img
-                      src="https://i.postimg.cc/jScR16V7/Group-38.png"
-                      alt="third-avt"
-                    />
-                  </div>
-                  <div class="fourth">
-                    <img
-                      src="https://i.postimg.cc/PxgHD2DB/Group-39.png"
-                      alt="third-avt"
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="left-footer">
-                <div class="left-footer-container">
-                  <div class="input-group">
-                    <div class="input-container">
-                      <div>
-                        <div class="share">
-                          <img
-                            src="https://i.postimg.cc/5ysmGkmr/Attachment.png"
-                            alt="share"
-                          />
-                        </div>
-                        <div class="inp">
-                          <input type="text" placeholder="Type something..." />
-                        </div>
-                      </div>
-                      <div class="emoji">
-                        <img
-                          src="https://i.postimg.cc/76x0knbr/Smiley.png"
-                          alt="emoji"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="btn-container">
-                    <button>
-                      <img
-                        src="https://i.postimg.cc/5t4hhvd2/Union-1.png"
-                        alt="send"
-                      />
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"
+    integrity="sha512-luMnTJZ7oEchNDZAtQhgjomP1eZefnl82ruTH/3Oj/Yu5qYtwL7+dVRccACS/Snp1lFXq188XFipHKYE75IaQQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <title>Culture Query</title>
+  <link rel="stylesheet" href="/styles/home.css">
+</head>
+
+<body>
+  <div class="container-fluid page-2" id="page-2">
+    <div class="row" style="height: 100vh; overflow: hidden;">
+
+      <!-- right side chat box container ui -->
+      <div class="d-flex flex-column dark-mode-bg">
+        <div class="d-flex align-items-center">
+          <img src="/images/cultureLogo.png" class="didi-3" alt="Your Image">
+          <p class="ms-2 mb-0 didi-name"> Culture Support</p>
+          <!-- <span class="green-dot"></span> -->
+        </div>
+
+        <div class="chat-container">
+          <div class="chat-conversation mt-3" id="chatConversation">
+            <!-- Chat messages will be appended here -->
           </div>
         </div>
-      </div>
-      <!-- left-end -->
-      <!-- right-start -->
-      <div class="right">
-        <div class="right-container">
-          <div class="right-card">
-            <div class="right-card-container">
-              <div class="right-card-header">
-                <span class="header-bold">My Contact List</span>
-                <div>
-                  <img
-                    src="https://i.postimg.cc/65dRS4fS/Dots-1.png"
-                    alt="kebab"
-                  />
-                </div>
-              </div>
-              <div class="right-card-body">
-                <div class="right-card-body-container">
-                  <div class="card">
-                    <div class="profile">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/PJMXbH16/Icon.png
-                            "
-                          alt="profile"
-                        />
-                      </div>
-                      <div class="profile-info">
-                        <span class="name-font">Neelesh Chaudhary</span>
-                        <span class="job-font">UI / UX Designer</span>
-                      </div>
-                    </div>
-                    <div class="icons">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/Jnv6TH50/Message.png"
-                          alt="message"
-                        />
-                      </div>
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/9XwND1c7/Phone.png"
-                          alt="phone"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="profile">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/yN5tGGV7/Icon-1.png
-                            "
-                          alt="profile"
-                        />
-                      </div>
-                      <div class="profile-info">
-                        <span class="name-font">Guy Fisher</span>
-                        <span class="job-font">Business Analyst</span>
-                      </div>
-                    </div>
-                    <div class="icons">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/Jnv6TH50/Message.png"
-                          alt="message"
-                        />
-                      </div>
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/9XwND1c7/Phone.png"
-                          alt="phone"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="profile">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/1tGBK7XC/Icon-2.png"
-                          alt="profile"
-                        />
-                      </div>
-                      <div class="profile-info">
-                        <span class="name-font">Diane Hawkins</span>
-                        <span class="job-font">Blockchain Expert</span>
-                      </div>
-                    </div>
-                    <div class="icons">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/Jnv6TH50/Message.png"
-                          alt="message"
-                        />
-                      </div>
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/9XwND1c7/Phone.png"
-                          alt="phone"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="profile">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/CKDsFrGh/Icon-3.png
-                            "
-                          alt="profile"
-                        />
-                      </div>
-                      <div class="profile-info">
-                        <span class="name-font">Dustin Mccoy</span>
-                        <span class="job-font">Product Designer</span>
-                      </div>
-                    </div>
-                    <div class="icons">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/Jnv6TH50/Message.png"
-                          alt="message"
-                        />
-                      </div>
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/9XwND1c7/Phone.png"
-                          alt="phone"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="profile">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/K83nNpsP/Icon-4.png
-                            "
-                          alt="profile"
-                        />
-                      </div>
-                      <div class="profile-info">
-                        <span class="name-font">Philip Cooper</span>
-                        <span class="job-font">Quality Assurance</span>
-                      </div>
-                    </div>
-                    <div class="icons">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/Jnv6TH50/Message.png"
-                          alt="message"
-                        />
-                      </div>
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/9XwND1c7/Phone.png"
-                          alt="phone"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="profile">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/JnYnSMsG/Icon-5.png
-                            "
-                          alt="profile"
-                        />
-                      </div>
-                      <div class="profile-info">
-                        <span class="name-font">Scarlett Murphy</span>
-                        <span class="job-font">Researcher</span>
-                      </div>
-                    </div>
-                    <div class="icons">
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/Jnv6TH50/Message.png"
-                          alt="message"
-                        />
-                      </div>
-                      <div>
-                        <img
-                          src="https://i.postimg.cc/9XwND1c7/Phone.png"
-                          alt="phone"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </div>
+
+        <div class="chat-input">
+          <form class="chat-box d-flex align-items-center" id="messageForm">
+            <input type="text" placeholder="Type your message..." class="form-control mt-2 rounded border"
+              id="messageInput">
+            <div class="icon-container ms-auto">
+              <i class="ri-emoji-sticker-line"></i>
+              <i class="ri-camera-2-line"></i>
+              <div class="send-icon-container" id="sendMessageButton">
+                <i class="ri ri-send-plane-fill ri-xl"></i>
               </div>
             </div>
-          </div>
+          </form>
         </div>
+
       </div>
-      <!-- right-end -->
     </div>
-  </body>
+  </div>
+  <script src="/js/agentSide.js"></script>
+</body>
+
 </html>
