active agents and get chat model are completed and socketcaht js is also complete

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,6 +64,17 @@
       </div>
     </div>
   </div>
+  
+  <div id="notificationCard" class="notification-card">
+    <div class="notification-content">
+      <p id="notificationMessage" class="notification-message"></p>
+      <div class="notification-buttons">
+        <button id="acceptButton" class="btn btn-primary">Accept</button>
+        <button id="rejectButton" class="btn btn-secondary">Reject</button>
+      </div>
+    </div>
+  </div>
+
   <script src="/js/home.js"></script>
 </body>
 
