--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -440,3 +440,24 @@ body {
 .attachment-box p {
     margin: 0;
 }
+
+.notification-card {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 20px;
+}
+
+.notification-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.notification-buttons button {
+    margin-left: 5px;
+}
