--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -2,462 +2,291 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
 }
 
 html,
 body {
     height: 100%;
-    margin: 0;
-}
-
-.row {
+    font-family: 'Inter', sans-serif;
     overflow: hidden;
 }
 
-.col-md-4 {
+#container {
+    display: flex;
+    align-items: center;
     height: 100%;
-    overflow-y: auto;
-}
-
-.sticky-container {
-    position: sticky;
-    top: 0;
-    background-color: #ffffff;
-    z-index: 1000;
-}
-
-.sticky-container input[type="text"] {
     width: 100%;
-    padding: 8px;
 }
 
-
-body {
-    overflow-y: scroll;
-}
-
-.didi-name,
-#searchInput {
-    position: sticky;
-    top: 0;
-    background-color: white;
-    z-index: 1;
-}
-
-.fixed-content {
-    position: sticky;
-    top: 0;
-    background-color: rgb(255, 255, 255);
-    z-index: 5;
-}
-
-::-webkit-scrollbar {
-    display: none;
-}
-
-
-.container {
-    position: relative;
-    z-index: 1;
-
-}
-
-.shadow {
-    box-shadow: none;
-}
-
-.didi-1 {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-.didi-3 {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-.didi-name {
-    font-size: 18px;
-    font-weight: 600;
-    color: royalblue;
-}
-
-.position {
-    font-size: 14px;
-    font-weight: bold;
-    color: #555;
-}
-
-.border {
-    border-radius: 10px;
-}
-
-.contact {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-    cursor: pointer;
-}
-
-.contact-info {
-    flex: 1;
-    /* Take up remaining space */
-    overflow: hidden;
-    /* Hide overflowing text */
-}
-
-.contact-header {
-    display: flex;
-    justify-content: space-between;
-}
-
-.unread-count {
-    background-color: #1c7bf8;
-    color: #fff;
-    border-radius: 50%;
-    padding: 2px 6px;
-    font-size: 12px;
-}
-
-.recent-message-info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.recent-message {
-    white-space: nowrap;
-    /* Prevent wrapping */
-    overflow: hidden;
-    /* Hide overflowing text */
-    text-overflow: ellipsis;
-    /* Display ellipsis (...) for truncated text */
-    margin-right: 10px;
-    /* Add spacing between message and time */
-}
-
-.message-time {
-    color: #757575;
-    font-size: 12px;
-}
-
-.contact-image {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-
-.contact-name {
-    font-size: 16px;
-    font-weight: 500;
-    color: royalblue;
-}
-
-.message-time {
-    color: #777;
-}
-
-.fa-check {
-    font-size: 16px;
-}
-
-.green-dot {
-    width: 10px;
-    height: 10px;
-    background-color: green;
-    border-radius: 50%;
-    display: inline-block;
-    margin-left: 5px;
-}
-
-.icon-container {
-    display: flex;
-    align-items: center;
-}
-
-.icon-container i {
-    font-size: 18px;
-    color: #333;
-}
-
-
-.icon-container i:not(:last-child) {
-    margin-right: 10px;
-}
-
-.chat-bubble.sender {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 15px;
-    /* Adjust margin as needed */
-}
-
-.sender-info {
-    display: flex;
-    align-items: flex-end;
-}
-
-.sender-image {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-
-.message {
-    background-color: #3996fb;
-    padding: 15px;
-    border-radius: 10px;
-}
-
-.chats-s {
-    margin: 0;
-    font-size: 14px;
-    /* Adjust font size as needed */
-    line-height: 1.4;
-    color: white;
-    font-weight: 400;
-}
-
-.chats-r {
-    margin: 0;
-    font-size: 14px;
-    /* Adjust font size as needed */
-    line-height: 1.4;
-    color: rgb(0, 0, 0);
-    font-weight: 400;
-}
-
-.message-time-sender {
-    color: #373434;
-    font-size: 12px;
-}
-
-.chat-bubble.receiver {
-    display: flex;
-    justify-content: flex-start;
-    margin-bottom: 15px;
-    /* Adjust margin as needed */
-}
-
-.receiver-info {
-    display: flex;
-    align-items: flex-end;
-}
-
-.receiver-image {
-    width: 40px;
-    /* Adjust width as needed */
-    height: 40px;
-    /* Adjust height as needed */
-    border-radius: 50%;
-    /* Make it round */
-    margin-left: 10px;
-    /* Adjust margin as needed */
-}
-
-.message.receiver {
-    background-color: #E0E0E0;
-    /* Example background color */
-    padding: 10px;
-    border-radius: 10px;
-    /* Adjust border radius as needed */
-}
-
-.chats.receiver {
-    margin: 0;
-    font-size: 14px;
-    /* Adjust font size as needed */
-    line-height: 1.4;
-    /* Adjust line height as needed */
-}
-
-.message-time.receiver {
-    font-size: 12px;
-    /* Adjust font size as needed */
-    color: #888;
-    /* Example color */
-}
-
-.sender {
-    margin-left: auto;
-}
-
-.receiver {
-    margin-right: auto;
-
-}
-
-.chat-container {
+.side {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     height: 100vh;
-    /* Adjust height as needed */
-    overflow: hidden;
-    /* Hide overflow to prevent double scrollbars */
-}
-
-.chat-conversation {
-    flex: 1;
-    overflow-y: auto;
-    padding: 10px;
-    max-height: calc(100vh - 100px);
-}
-
-.chat-input {
-    position: sticky;
-    bottom: 0;
     background-color: #ffffff;
-
-    border-top: 1px solid #dddddd;
-    /* Add border to separate chat input */
+    padding: 20px;
+    color: black;
+    border-right: 1px solid #e0e0e0;
 }
 
-
-.message-input {
-    border-color: #ffffff;
+.menu {
+    flex-grow: 1;
 }
 
-.icon-container i {
-    color: royalblue
-}
-
-.icon-container i {
-    color: #a0a0a0;
-    /* Change the color of the icons */
-}
-
-.send-icon-container {
-    background-color: royalblue;
-    border-radius: 50%;
-    /* Make it a circle */
-    padding: 10px;
-}
-
-.send-icon-container i {
-    color: #ffffff;
-
-}
-
-
-.didi-2 {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-left: 50px;
-}
-
-.maalik-name {
-    font-size: 28px;
-    font-weight: 700;
-    color: royalblue;
-    text-align: center;
-}
-
-.maalik-post {
-    font-size: 22px;
-    font-weight: 500;
-    color: #777;
-    line-height: 5px;
-}
-
-.ri {
-    color: #007bff;
-}
-
-.ri-xl {
-    font-size: 2.5rem;
-}
-
-.rounded-icon-container {
-    border-radius: 40px;
-    padding: 10px;
-    margin-right: 10px;
-    background-color: #c4ddf7;
-}
-
-.friends {
-
-    align-items: center;
-    margin-top: 50px;
-}
-
-.friend-item {
+.menu-item {
     display: flex;
     align-items: center;
-    margin-top: 10px;
-}
-
-.friend-item i {
-    font-size: 24px;
-    /* Adjust as needed */
-    margin-right: 10px;
-    /* Adjust as needed */
-}
-
-.heart {
-    margin-top: 10px;
-    color: #898989;
-}
-
-.friend {
-    margin-top: 10px;
-    color: #898686;
-}
-
-.attachment {
-    color: #333;
-    font-size: 25px;
-}
-
-.attachment-container {
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
-}
-
-.attachment-box {
-    /* border: 0.5px solid #05b0d6; */
-    padding: 10px;
-    background-color: #cee0fb;
-    margin-right: 10px;
-    border-radius: 10px;
-    width: 80px;
-    height: 80px;
-    display: flex;
     justify-content: center;
-    /* Center text horizontally */
-    align-items: center;
-    /* Center text vertically */
-    color: royalblue;
-    font-weight: 500;
+    padding: 5px;
+    cursor: pointer;
+    position: relative;
+    transition: background-color 0.3s ease;
 }
 
-.attachment-box p {
-    margin: 0;
+.menu-item i {
+    font-size: 24px;
+    margin-bottom: 20px;
 }
 
-.notification-card {
+.menu-item.selected,
+.menu-item:hover {
+    background-color: #E6EBF5;
+}
+
+.menu-item .tooltip {
+    visibility: hidden;
+    width: 100px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
     position: absolute;
-    top: 10px;
-    right: 30px;
-    display: none;
-    align-items: center;
-    flex-direction: column;
-    overflow: hidden;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -50px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.menu-item:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+}
+
+.logout {
+    margin-top: 20px;
+}
+
+.menu-item.selected {
+    background-color: #E6EBF5;
+}
+
+.sidebar {
+    background-color: #F5F7FB;
+    width: 20%;
+    height: 100%;
     padding: 20px;
 }
 
-.notification-content {
+.sidebar h1 {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.search-bar {
     display: flex;
     align-items: center;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #E6EBF5;
+    margin-bottom: 20px;
+}
+
+.search-bar input {
+    flex: 1;
+    border: none;
+    padding: 7px;
+    border-radius: 5px;
+    margin-left: 10px;
+    background-color: #E6EBF5;
+    outline: none;
+    font: 1em sans-serif;
+}
+
+.search-bar input::placeholder {
+    color: #8c96a5;
+    font: 1em sans-serif;
+    font-size: 15px;
+}
+
+.search-bar input:focus {
+    outline: none;
+    /* box-shadow: 0 0 0 2px #4d90fe;  */
+}
+
+.chat_side {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.recent {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0 10px 0;
+}
+
+.recent h4 {
+    font-weight: 500;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.user {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+
+.user:hover {
+    background-color: #E6EBF5;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+.user-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #DBDBF9;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 15px;
+}
+
+.user-image h4 {
+    display: flex;
+    color: blueviolet;
+    align-items: center;
+}
+
+.user-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.user-info h4 {
+    font-size: 16px;
+    margin-bottom: 8px;
+    font-weight: 500;
+}
+
+.user-info p {
+    font-size: 14px;
+    font-weight: 400;
+    color: #8c96a5;
+}
+
+.chat-side {
+    height: 100%;
+    width: 80%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
-.notification-buttons button {
-    margin-left: 5px;
+.top {
+    border-bottom: 1px solid #e0e0e0;
+    display: flex;
+    height: 60px;
+}
+
+.user-top {
+    margin: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.chat-section {
+    overflow-y: scroll;
+    padding: 10px;
+    height: 90vh;
+}
+
+.client {
+    background-color: #7269EF;
+    width: 10vw;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    border-radius: 10px 10px 10px 0;
+    margin-bottom: 10px;
+    margin-right: auto;
+}
+
+.client h3 {
+    color: white;
+    font-weight: 500;
+}
+
+.support {
+    background-color: #EFF2F7;
+    width: 10vw;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    border-radius: 10px 10px 0 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+}
+
+.support h3 {
+    color: rgb(102, 102, 102);
+    font-weight: 500;
+}
+
+.input-filed {
+    border-top: 1px solid #e0e0e0;
+    background-color: white;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.input-filed input {
+    flex: 1;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    margin-right: 40px;
+    background-color: #E6EBF5;
+    outline: none;
+    font: 1em sans-serif;
+}
+
+.icon-send {
+    margin-left: 20px;
+    background-color: #7269EF;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.fa {
+    cursor: pointer;
 }
