--- a/views/agentside.ejs
+++ b/views/agentside.ejs
@@ -7,54 +7,43 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"
     integrity="sha512-luMnTJZ7oEchNDZAtQhgjomP1eZefnl82ruTH/3Oj/Yu5qYtwL7+dVRccACS/Snp1lFXq188XFipHKYE75IaQQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <title>Culture Query</title>
-  <link rel="stylesheet" href="/styles/home.css">
+  <link rel="stylesheet" href="/styles/agentSide.css">
 </head>
 
 <body>
-  <div class="container-fluid page-2" id="page-2">
-    <div class="row" style="height: 100vh; overflow: hidden;">
+  <div class="chat">
 
-      <!-- right side chat box container ui -->
-      <div class="d-flex flex-column dark-mode-bg">
-        <div class="d-flex align-items-center">
-          <img src="/images/cultureLogo.png" class="didi-3" alt="Your Image">
-          <p class="ms-2 mb-0 didi-name"> Culture Support</p>
-          <!-- <span class="green-dot"></span> -->
+    <div class="chat-texts">
+
+      <div class="text">
+        <div class="profile-pic"> <img
+            src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+            alt=""> </div>
+        <div class="text-content">
+          <h5>Culture support</h5>Hey how can i help you?<span class="timestamp">12:00hrs</span>
         </div>
-
-        <div class="chat-container">
-          <div class="chat-conversation mt-3" id="chatConversation">
-            <!-- Chat messages will be appended here -->
-          </div>
-        </div>
-
-        <div class="chat-input">
-          <form class="chat-box d-flex align-items-center" id="messageForm">
-            <input type="text" placeholder="Type your message..." class="form-control mt-2 rounded border"
-              id="messageInput">
-            <div class="icon-container ms-auto">
-              <i class="ri-emoji-sticker-line"></i>
-              <i class="ri-camera-2-line"></i>
-              <div class="send-icon-container" id="sendMessageButton">
-                <i class="ri ri-send-plane-fill ri-xl"></i>
-              </div>
-            </div>
-          </form>
-        </div>
-
       </div>
+      <!-- <div class="text sent">
+        <div class="profile-pic"> <img
+            src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+            alt=""> </div>
+        <div class="text-content">
+          <h5>Joannie</h5>Lorem ipsum dolor sit amet.<span class="timestamp">12:00hrs</span>
+        </div>
+      </div> -->
     </div>
+
+    <div class="send-message">
+      <div class="message-text">
+        <input class="message" type="text" placeholder="Send Message">
+        <div class="attachment"><i class="ri-attachment-line"></i></i></div>
+      </div>
+      <button class="send-message-button"><i class="ri-arrow-right-line"></i></i></button>
+    </div>
+
+
   </div>
   <script src="/js/agentSide.js"></script>
 </body>
