homejs and ejs is done

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -120,6 +120,7 @@
 
       </div>
     </div>
+
     <div class="chat-side">
       <div class="top">
         <div class="user-top">
@@ -132,20 +133,12 @@
         </div>
       </div>
       <div class="chat-section">
-        <div class="client">
-          <h3>Good Morning</h3>
-        </div>
-        <div class="support">
-          <h3>Good Morning</h3>
-        </div>
-        <div class="client">
-          <h3>Good Morning</h3>
-        </div>
+        
       </div>
       <div class="input-filed">
-        <input type="text" placeholder="Enter a message....">
+        <input type="text" id="messageInput" placeholder="Enter a message....">
         <i class="ri-attachment-line fa"></i>
-        <div class="icon-send">
+        <div class="icon-send" id="connectButton">
           <i class="ri-send-plane-2-fill" style="color: white;"></i>
         </div>
       </div>
