all routes are dynamic completely

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -99,7 +99,7 @@
           <i class="ri-user-line"></i>
         </div>
       </div>
-      <div class="logout">
+      <div class="logout" id="logout">
         <div class="menu-item">
           <i class="ri-logout-box-line"></i>
           <span class="tooltip">Logout</span>
@@ -122,25 +122,20 @@
     </div>
 
     <div class="chat-side">
-      <div class="top">
-        <div class="user-top">
-          <div class="user-image">
-            <h4>G</h4>
-          </div>
-          <div class="user-info">
-            <h4>John Doe</h4>
-          </div>
-        </div>
+
+      <!-- chat header are done -->
+      <div id="chatHeader">
+
       </div>
+
+      <!-- chat section are done -->
       <div class="chat-section">
-        
+
       </div>
-      <div class="input-filed">
-        <input type="text" id="messageInput" placeholder="Enter a message....">
-        <i class="ri-attachment-line fa"></i>
-        <div class="icon-send" id="connectButton">
-          <i class="ri-send-plane-2-fill" style="color: white;"></i>
-        </div>
+
+      <!-- input details are done -->
+      <div id="inputSection">
+
       </div>
     </div>
   </div>
