--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -210,6 +210,7 @@ body {
     border-bottom: 1px solid #e0e0e0;
     display: flex;
     height: 60px;
+    align-items: center;
 }
 
 .user-top {
@@ -226,38 +227,47 @@ body {
 
 .client {
     background-color: #7269EF;
-    width: 10vw;
+    width: 15vw;
     padding: 15px;
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: center;
+    align-items: start;
     border-radius: 10px 10px 10px 0;
     margin-bottom: 10px;
     margin-right: auto;
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .client h3 {
     color: white;
-    font-weight: 500;
+    font-weight: 400;
+    white-space: normal;
+    font-size: medium;
+    overflow: hidden;
 }
 
 .support {
     background-color: #EFF2F7;
-    width: 10vw;
+    width: 15vw;
     padding: 15px;
     display: flex;
     flex-direction: column;
-    justify-content: end;
-    align-items: center;
+    align-items: end;
     border-radius: 10px 10px 0 10px;
     margin-bottom: 10px;
     margin-left: auto;
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .support h3 {
     color: rgb(102, 102, 102);
-    font-weight: 500;
+    font-weight: 400;
+    width: 100%;
+    white-space: normal;
+    font-size: medium;
+    overflow: hidden;
 }
 
 .input-filed {
@@ -289,4 +299,25 @@ body {
 
 .fa {
     cursor: pointer;
+}
+
+.notification-card {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 20px;
+}
+
+.notification-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.notification-buttons button {
+    margin-left: 5px;
 }
