--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -301,6 +301,69 @@ body {
     cursor: pointer;
 }
 
+.overlay {
+    width: 100%;
+    height: 100%;
+    overlay: hidden;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.cancelSign {
+    display: flex;
+    align-items: end;
+    justify-content: end;
+}
+
+.confirmation {
+    width: 300px;
+    height: 250px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.confirmation h4 {
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-self: center;
+}
+
+.confirmation p {
+    font-weight: 500;
+    margin-bottom: 10px;
+    display: flex;
+    justify-self: center;
+}
+
+.confirm {
+    width: 100%;
+    background-color: #7269EF;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 2px;
+    border: none;
+    cursor: pointer;
+    margin-right: 20px;
+    margin-bottom: 10px;
+}
+
+.cancel {
+    width: 100%;
+    background-color: white;
+    padding: 10px 20px;
+    border: 1px solid #e0e0e0;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
 .notification-card {
     position: absolute;
     top: 10px;
