sum agent and all chat router is done

--- a/views/agentside.ejs
+++ b/views/agentside.ejs
@@ -27,8 +27,8 @@
           <h5>Culture support</h5>
           <p>Hey, how can I help you?</p>
           <div class="options">
-            <button class="option-button" onclick="handleOption('booking')">See Booking</button>
-            <button class="option-button" onclick="handleOption('travelerName')">See Traveler Name</button>
+            <button class="option-button" onclick="handleOption('existingBooking')">See Existing Booking</button>
+            <button class="option-button" onclick="handleOption('newBooking')">See New Booking</button>
             <button class="option-button" onclick="handleOption('chat')">Chat with Us</button>
           </div>
         </div>
