done and impliment sound home ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -96,7 +96,7 @@
           <i class="ri-close-line" id="closeOverlay"></i>
         </div>
         <h4>Complete this action?</h4>
-        <p>Confirm to logout</p>
+        <p>Confirm to logout &#128540; </p>
         <div>
           <button class="confirm" id="confirmLogout">Confirm</button>
         </div>
@@ -154,6 +154,9 @@
       </div>
     </div>
   </div>
+  <audio id="matchSound" src="/sound/message1.mp3"></audio>
+  <audio id="defaultSound" src="/sound/messageMain.mp3"></audio>
+
   <div id="notificationCard" class="notification-card">
     <div class="notification-content">
       <p id="notificationMessage" class="notification-message"></p>
