see booking details are done

--- a/views/agentside.ejs
+++ b/views/agentside.ejs
@@ -28,7 +28,7 @@
           <p>Hey, how can I help you?</p>
           <div class="options">
             <button class="option-button" onclick="handleOption('existingBooking')">See Existing Booking</button>
-            <button class="option-button" onclick="handleOption('newBooking')">See New Booking</button>
+            <button class="option-button" onclick="handleOption('newBooking')">Create New Booking</button>
             <button class="option-button" onclick="handleOption('chat')">Chat with Us</button>
           </div>
         </div>
