--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,79 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"
-    integrity="sha512-luMnTJZ7oEchNDZAtQhgjomP1eZefnl82ruTH/3Oj/Yu5qYtwL7+dVRccACS/Snp1lFXq188XFipHKYE75IaQQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  <title>Document</title>
-  <link rel="stylesheet" href="/styles/home.css">
-</head>
-
-<body>
-  <div class="container-fluid page-2" id="page-2">
-    <div class="row" style="height: 100vh; overflow: hidden;">
-
-      <div class="col-md-4 dark-mode-bg overflow-y-auto" style="background-color: aliceblue;">
-        <div class="fixed-content ">
-          <div class="sticky-container">
-            <div class="d-flex align-items-center justify-content-between p-3">
-              <div class="d-flex align-items-center">
-                <img src="https://robohash.org/3.png" class="didi-1" alt="Your Image">
-                <p class="ms-2 mb-0 didi-name" id="userName"></p>
-              </div>
-              <i class="ri-pencil-line" style="font-size: 24px;"></i>
-            </div>
-            <input type="text" id="searchInput" placeholder="Search..."
-              class="form-control mt-2 rounded border dark-mode-input">
-          </div>
-          <div class="mt-3 dark-mode-bg" id="chatContainer">
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-8 d-flex flex-column dark-mode-bg .chat-conversation">
-
-        <div id="chatWidgetWrapper"></div>
-
-        <div class="chat-container">
-          <div class="chat-conversation mt-3" id="chatConversation">
-          </div>
-        </div>
-        
-        <div class="chat-input" id="chatInputWidget">
-        </div>
-
-      </div>
-    </div>
-  </div>
-  
-  <div id="notificationCard" class="notification-card">
-    <div class="notification-content">
-      <p id="notificationMessage" class="notification-message"></p>
-      <div class="notification-buttons">
-        <button id="acceptButton" class="btn btn-primary">Accept</button>
-        <button id="rejectButton" class="btn btn-secondary">Reject</button>
-      </div>
-    </div>
-  </div>
-
-  <script src="/js/home.js"></script>
-</body>
-
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -126,7 +50,7 @@
       <h1>Culture Support</h1>
       <div class="search-bar">
         <i id="fas" class="ri-search-line" style="color: #a1a1a1;"></i>
-        <input type="text" placeholder="Search messages or users">
+        <input type="text" placeholder="Search Users">
       </div>
       <div class="recent">
         <h4>Recent</h4>
